--- a/Pathfind/Pathfinder.csproj
+++ b/Pathfind/Pathfinder.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{6747986E-DCFA-4B2F-ABA6-866EC9D4AD78}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>Tubes2_App</RootNamespace>
-    <AssemblyName>Mangga-stalker</AssemblyName>
+    <RootNamespace>Pathfinder</RootNamespace>
+    <AssemblyName>Pathfinder</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
